Removed some unnecessary "(short)" type casts.